# ros2_ASR

./: .gitignore  AUDIT_METRICS_MATRIX.csv  AUDIT_PHASE_1_INVENTORY.md  AUDIT_PHASE_2_DATAFLOW.md  AUDIT_PHASE_3_METRICS.md  AUDIT_PHASE_4_CONFIGS_AND_PROFILES.md  AUDIT_PHASE_5_ROS2_ARCHITECTURE.md  AUDIT_PHASE_6_THEORETICAL_AND_CONCEPTUAL.md  AUDIT_PHASE_7_CLEANUP_PLAN.md  AUDIT_PROFILES_MATRIX.csv  AUDIT_REPORT.md  BROKEN_OR_FAKE_PATHS.md  CHANGELOG_AUDIT_REPAIR_REFACTOR.md  CLEANUP_MATRIX.csv  CONCEPT_ALIGNMENT_REFACTOR.md  CONFIGS_AND_PROFILES_REFACTOR.md  FINAL_CLEANUP_REPORT.md  HARDENING_REPORT.md  KNOWN_LIMITATIONS.md  LICENSE  METRICS_AUDIT_REPORT.md  METRICS_REFACTOR_NOTES.md  MODULE_CLASSIFICATION_MATRIX.csv  Makefile  PROVIDER_INTEGRATION_STATUS.md  README.md  REAL_EXECUTION_PATHS.md  ROS2_RUNTIME_REFACTOR_NOTES.md  SAFE_REFACTOR_SEQUENCE.md  SECURITY_NOTES.md  TARGET_ARCHITECTURE_PROPOSAL.md  TEST_MATRIX.md  THESIS_READER_GUIDE.md  TODO_BACKLOG.md  archviz  pyproject.toml  requirements.txt
ros2_ws/src/asr_backend_aws/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_backend_aws/asr_backend_aws/: __init__.py  backend.py
ros2_ws/src/asr_backend_aws/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_backend_azure/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_backend_azure/asr_backend_azure/: __init__.py  backend.py
ros2_ws/src/asr_backend_azure/resource/: asr_backend_azure
ros2_ws/src/asr_backend_azure/test/: test_smoke.py
ros2_ws/src/asr_benchmark/: README.md  package.xml  setup.py
ros2_ws/src/asr_benchmark/asr_benchmark/: __init__.py  benchmark_node.py  dataset.py  noise.py  runner.py
ros2_ws/src/asr_benchmark/launch/: benchmark.launch.py
ros2_ws/src/asr_benchmark/resource/: asr_benchmark
ros2_ws/src/asr_benchmark/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_benchmark_nodes/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_benchmark_nodes/asr_benchmark_nodes/: __init__.py  benchmark_manager_node.py
ros2_ws/src/asr_benchmark_nodes/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_config/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_config/asr_config/: __init__.py  loader.py  models.py  secrets.py  validation.py
ros2_ws/src/asr_config/test/: __init__.py  test_smoke.py  test_validation.py
ros2_ws/src/asr_core/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_core/asr_core/: __init__.py  audio.py  backend.py  config.py  exceptions.py  factory.py  ids.py  language.py  logging_utils.py  models.py  namespaces.py  normalized.py  ros_parameters.py  shutdown.py  streaming.py
ros2_ws/src/asr_core/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_datasets/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_datasets/asr_datasets/: __init__.py  importer.py  manifest.py  registry.py
ros2_ws/src/asr_datasets/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_gateway/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_gateway/asr_gateway/: api.py  log_views.py  main.py  result_views.py  ros_client.py  runtime_assets.py  secret_state.py
ros2_ws/src/asr_gateway/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_interfaces/: CMakeLists.txt  README.md  TODO.md  package.xml
ros2_ws/src/asr_interfaces/action/: DownloadModel.action  GenerateReport.action  ImportDataset.action  RunBenchmarkExperiment.action  StreamSession.action  Transcribe.action
ros2_ws/src/asr_interfaces/msg/: AsrEvent.msg  AsrMetrics.msg  AsrResult.msg  AsrResultPartial.msg  AudioChunk.msg  AudioSegment.msg  BenchmarkJobStatus.msg  DatasetStatus.msg  ExperimentSummary.msg  MetricArtifactRef.msg  NodeStatus.msg  ResultArtifactRef.msg  SessionStatus.msg  SpeechActivity.msg  WordTimestamp.msg
ros2_ws/src/asr_interfaces/srv/: GetAsrStatus.srv  GetBenchmarkStatus.srv  ListBackends.srv  ListDatasets.srv  ListProfiles.srv  RecognizeOnce.srv  ReconfigureRuntime.srv  RegisterDataset.srv  SetAsrBackend.srv  StartRuntimeSession.srv  ValidateConfig.srv
ros2_ws/src/asr_launch/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_launch/asr_launch/: __init__.py  launch_env.py  launch_guard.py
ros2_ws/src/asr_launch/launch/: benchmark_matrix.launch.py  benchmark_single_provider.launch.py  full_stack_dev.launch.py  gateway_with_runtime.launch.py  runtime_minimal.launch.py  runtime_streaming.launch.py
ros2_ws/src/asr_launch/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_provider_azure/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_provider_azure/asr_provider_azure/: __init__.py  azure_provider.py  backend.py
ros2_ws/src/asr_provider_azure/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_provider_base/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_provider_base/asr_provider_base/: __init__.py  adapter.py  capabilities.py  catalog.py  manager.py  models.py  registry.py
ros2_ws/src/asr_provider_base/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_provider_google/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_provider_google/asr_provider_google/: __init__.py  backend.py  google_provider.py
ros2_ws/src/asr_provider_google/test/: __init__.py  test_smoke.py
ros2_ws/src/asr_provider_huggingface/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_provider_huggingface/asr_provider_huggingface/: __init__.py  api_provider.py  (+3 more)
ros2_ws/src/asr_reporting/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_ros/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_runtime_nodes/: README.md  TODO.md  package.xml  setup.cfg  setup.py
ros2_ws/src/asr_storage/: README.md  TODO.md  package.xml  setup.cfg  setup.py
tools/docsbot/: .env.sample  README.md  pyproject.toml
tools/docsbot/docsbot/: __init__.py  cli.py  config.py
tools/docsbot/scripts/: docsbot-watch.service  run_docsbot.sh
tools/docsbot/tests/: test_diff_engine.py  test_link_checker.py  test_orchestrator.py  test_slugger.py
(+2262 files in other folders)
