<?xml version="1.0"?>
<package format="3">
  <name>asr_backend_aws</name>
  <version>0.1.0</version>
  <description>AWS Transcribe backend</description>
  <maintainer email="asr-team@ros2-asr.localdomain">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>asr_core</exec_depend>
  <exec_depend>python3-amazon-transcribe</exec_depend>
  <exec_depend>python3-boto3</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
