<?xml version="1.0"?>
<package format="3">
  <name>asr_backend_azure</name>
  <version>0.1.0</version>
  <description>Azure Speech backend</description>
  <maintainer email="maintainer@example.com">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>asr_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
