<?xml version="1.0"?>
<package format="3">
  <name>asr_benchmark_nodes</name>
  <version>0.1.0</version>
  <description>ROS2 nodes exposing benchmark orchestrator and dataset actions</description>
  <maintainer email="asr-team@ros2-asr.localdomain">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>asr_interfaces</exec_depend>
  <exec_depend>asr_core</exec_depend>
  <exec_depend>asr_benchmark_core</exec_depend>
  <exec_depend>asr_datasets</exec_depend>
  <exec_depend>asr_storage</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
