<?xml version="1.0"?>
<package format="3">
  <name>asr_config</name>
  <version>0.1.0</version>
  <description>Profile-driven configuration resolver and secret reference model</description>
  <maintainer email="maintainer@example.com">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>asr_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
