<?xml version="1.0"?>
<package format="3">
  <name>asr_interfaces</name>
  <version>0.1.0</version>
  <description>ROS2 interfaces for universal ASR system</description>
  <maintainer email="maintainer@example.com">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
