<?xml version="1.0"?>
<package format="3">
  <name>asr_ros</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for universal ASR system</description>
  <maintainer email="maintainer@example.com">ASR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>asr_interfaces</exec_depend>
  <exec_depend>asr_core</exec_depend>
  <exec_depend>asr_metrics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
